--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,11 @@
     <version>1.0.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.46</version>
+        </dependency>
+    </dependencies>
 </project>
